--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
+  "author": "MaxMedvedev",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
     "socket.io": "latest",
     "mysql": "^2.17.1"
+  },
+  "engines": {
+    "node": "10.15.x"
   }
 }
