--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "MaxMedvedev",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "socket.io": "latest",
+    "socket.io": "^2.2.0",
     "mysql": "^2.17.1"
   },
   "engines": {
     "node": "10.15.x"
-  }
+  },
+  "author": "",
+  "license": "ISC",
 }
