--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "express": "^4.16.4",
-    "socket.io": "^2.2.0",
-    "mysql": "^2.17.1"
+    "jquery": "^3.4.1",
+    "mysql": "^2.17.1",
+    "prefixfree": "^1.0.0",
+    "socket.io": "^2.2.0"
   },
   "engines": {
     "node": "10.15.x"
